--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
       </div>
     </nav>
 
+    <!-- Showcase -->
+    <section id="showcase" class="py-5">
+      <div class="primary-overlay text-white">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <h1 class="display-2 mt-5 pt-5">Do What You Dream Of...</h1>
+              <p class="lead">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                molestias.
+              </p>
+              <a href="#" class="btn btn-outline-secondary btn-lg text-white"
+                ><i class="fas fa-arrow-right"></i> Read More</a
+              >
+            </div>
+            <div class="col-lg-6">
+              <img src="img/book.png" class="img-fluid d-none d-lg-block" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
