--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="primary-overlay text-white">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 text-center">
               <h1 class="display-2 mt-5 pt-5">Do What You Dream Of...</h1>
               <p class="lead">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea,
@@ -70,6 +70,182 @@
             </div>
             <div class="col-lg-6">
               <img src="img/book.png" class="img-fluid d-none d-lg-block" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section id="newsletter" class="bg-dark text-white py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <input
+              type="text"
+              class="form-control form-control-lg mb-resp"
+              placeholder="Name"
+            />
+          </div>
+          <div class="col-md-4">
+            <input
+              type="email"
+              class="form-control form-control-lg mb-resp"
+              placeholder="Email"
+            />
+          </div>
+          <div class="col-md-4">
+            <button class="btn btn-primary btn-lg btn-block">
+              <i class="fas fa-envelope-open-o"></i> Subscribe
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Boxes -->
+    <section id="boxes" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card text-center border-primary mb-resp">
+              <div class="card-body">
+                <h3 class="text-primary">Be Better</h3>
+                <p class="text-muted">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quis, officiis.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center text-white bg-primary mb-resp">
+              <div class="card-body">
+                <h3>Be Smarter</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quis, officiis.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center border-primary mb-resp">
+              <div class="card-body">
+                <h3 class="text-primary">Be Faster</h3>
+                <p class="text-muted">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quis, officiis.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center text-white bg-primary">
+              <div class="card-body">
+                <h3>Be Stronger</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quis, officiis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About / Why Section -->
+    <section id="about" class="py-5 text-center bg-light">
+      <div class="container">
+        <div class="info-header mb-5">
+          <h1 class="text-primary pb-3">Why This Book?</h1>
+          <p class="lead pb-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam quis
+            deleniti consequatur facere, ipsum laboriosam.
+          </p>
+        </div>
+
+        <!-- Accordion -->
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header">
+              <h5 class="mb-0">
+                <div
+                  href="#collapse1"
+                  data-toggle="collapse"
+                  data-parent="#accordion"
+                  class="pointer"
+                >
+                  <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                </div>
+              </h5>
+            </div>
+
+            <div id="collapse1" class="collapse show">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corrupti placeat consequatur laborum aliquam aut similique
+                reiciendis, corporis id modi veniam cupiditate minus. Similique
+                consectetur ducimus odit dolorem officia rem veritatis laborum
+                doloremque voluptatum. Similique animi voluptatem dolorum
+                placeat assumenda sit nesciunt id explicabo quibusdam
+                consequuntur ipsa, suscipit delectus dicta aliquid?
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header">
+              <h5 class="mb-0">
+                <div
+                  href="#collapse2"
+                  data-toggle="collapse"
+                  data-parent="#accordion"
+                  class="pointer"
+                >
+                  <i class="fas fa-arrow-circle-down"></i> Gain The Knowledge
+                </div>
+              </h5>
+            </div>
+
+            <div id="collapse2" class="collapse">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corrupti placeat consequatur laborum aliquam aut similique
+                reiciendis, corporis id modi veniam cupiditate minus. Similique
+                consectetur ducimus odit dolorem officia rem veritatis laborum
+                doloremque voluptatum. Similique animi voluptatem dolorum
+                placeat assumenda sit nesciunt id explicabo quibusdam
+                consequuntur ipsa, suscipit delectus dicta aliquid?
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header">
+              <h5 class="mb-0">
+                <div
+                  href="#collapse3"
+                  data-toggle="collapse"
+                  data-parent="#accordion"
+                  class="pointer"
+                >
+                  <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                </div>
+              </h5>
+            </div>
+
+            <div id="collapse3" class="collapse">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corrupti placeat consequatur laborum aliquam aut similique
+                reiciendis, corporis id modi veniam cupiditate minus. Similique
+                consectetur ducimus odit dolorem officia rem veritatis laborum
+                doloremque voluptatum. Similique animi voluptatem dolorum
+                placeat assumenda sit nesciunt id explicabo quibusdam
+                consequuntur ipsa, suscipit delectus dicta aliquid?
+              </div>
             </div>
           </div>
         </div>
