--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Bootstrap Theme | Mizuxe</title>
   </head>
-  <body>
+  <body id="home" data-spy="scroll" data-target="#main-nav">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+    <nav
+      class="navbar navbar-expand-md navbar-light fixed-top py-4"
+      id="main-nav"
+    >
       <div class="container">
         <a href="index.html" class="navbar-brand">
           <img src="img/mlogo.png" width="50" height="50" />
@@ -436,6 +439,17 @@
       </div>
     </section>
 
+    <!-- Footer -->
+    <footer id="main-footer" class="py-5 bg-primary text-white">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-6 ml-auto">
+            <p class="lead">Copyright &copy; <span id="year"></span></p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -456,6 +470,30 @@
     <script>
       // Get the current year for the copyright
       $('#year').text(new Date().getFullYear());
+
+      // Init Scrollspy
+      $('body').scrollspy({
+        target: '#main-nav',
+      });
+
+      // Smooth Scrolling
+      $('#main-nav a').on('click', function (e) {
+        if (this.hash !== '') {
+          e.preventDefault();
+
+          const hash = this.hash;
+
+          $('html, body').animate(
+            {
+              scrollTop: $(hash).offset().top,
+            },
+            800,
+            function () {
+              window.location.hash = hash;
+            }
+          );
+        }
+      });
     </script>
   </body>
 </html>
